# Inventory-Management-System-

./: .gitignore  .npmrc  DASHBOARD_API_TODO.md  README.md  dashboard-backend-plan.md  index.html  next.config.ts  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
backend/: ERD.md  README.md  dev.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 143e8f9f1bdd_create_refresh_sessions.py  22df324b6cb6_create_users_table.py  8c762212de67_create_warehouses_and_zone_tables.py  a1f4c7d92b30_dashboard_inventory_tables.py  add_user_login_fields.py  ba71818cc1fb_drop_warehouses_capacity_total.py  c3d1a7b45e90_full_schema_orders_purchases_movements.py
backend/app/: config.py  deps.py  main.py  security.py  seed.py
backend/app/activity/: models.py  service.py
backend/app/appsettings/: models.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py
backend/app/dashboard/: router.py  schemas.py  service.py
backend/app/db/: mixins.py
backend/app/items/: models.py  router.py  schemas.py  service.py
backend/app/models/: inventory.py  order.py  purchase.py  session.py  user.py  warehouse.py  zone.py
backend/app/orders/: models.py  router.py
backend/app/purchases/: models.py
backend/app/routers/: auth.py  dashboard.py  inventory.py  purchases.py  uploads.py  users.py  warehouses.py  zones.py
backend/app/schemas/: common.py  inventory.py  (+5 more)
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_inventory.py  test_orders.py  test_purchases.py  test_users.py  test_zones.py
(+192 files in other folders)
